fix: adjust z-index of popup at the end of the game

--- a/quiz/src/styles/_popup.scss
+++ b/quiz/src/styles/_popup.scss
@@ -13,11 +13,11 @@
   background-color: rgba(0, 0, 0, 0.5);
   position: fixed;
   inset: 0;
-  z-index: 1;
+  z-index: 2;
 }
 
 .popup {
-  z-index: 2;
+  z-index: 3;
   background-color: $main-color;
   border: 0.5px solid black;
   border-radius: 10px;
